objects/Project__c.object
<CustomObject><fields>
        <fullName>ACF_Academic_Program2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Allows for students from a second Academic Program to be tied to the project</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Academic Program)</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related OEL Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Advisory_Services_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Services/Consulting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Analytics_Web_Mobile_Mkt_Rsrch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analytics - Web/Mobile/Mkt Research</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Business_Analytics_Concentration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Analytics Concentration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Business_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization, Educational Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OEL Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Projects (Course)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Deliverables__c</fullName>
        <label>Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Entrepreneurship_Concentration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrepreneurship Concentration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Finance_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance &amp; Accounting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Finance_Concentration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Concentration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Global_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Management Concentration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_HR_Org_Mgt_Change_Mgt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR / Org Mgt / Change Mgt</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Jan_March_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jan - March GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_January_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>January Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_March_May_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>March - May GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_March_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>March Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Marketing_Concentration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Concentration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_May_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Ops_Logistics_Supply_Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ops/Logistics/Supply Chain</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Primary_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Project_Offering_Status__c</fullName>
        <label>Project Offering Status</label>
        <picklist>
            <picklistValues>
                <fullName>Student Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Offered and Rolled-Over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Project_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Proposal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Project_Year__c</fullName>
        <label>Project Year</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Sales_Business_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales/Business Development</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Sales_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales &amp; Marketing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_September_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>September Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Sr_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sr. Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Sr. Project Manager)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Strategy_Bus_Planning_Forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategy/Business Planning &amp; Forecasting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>August_December_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>August - December GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>May_August_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May - August GCTT Projects</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Babson projects such as CCD Experiential Learning projects</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Project</label><nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Projects</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACF_Business_Org__c</columns>
        <columns>ACF_Course_Offering__c</columns>
        <columns>ACF_Academic_Program__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>